# TIAMv2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
doc/: benchmarking.md
src/tiam/: coco.py  colors.py  eval.py  main.py  tiam.py  tiam_per_prompt.py  utils.py
src/tiam/data/: 1_colored_entity.yaml  1_entity.yaml  24_objects.txt  2_colored_entities.yaml  2_entities.yaml  3_colored_entities.yaml  3_entities.yaml  colors.txt  sample.yaml
src/tiam/prompts_dataset/: factory.py  utils.py
tests/: test_tiam.py
tests/data/2_colored_entities/: tiam_score_2_colored_entities.json
tests/data/2_colored_entities/dataset_300_samples/: cache-7829905f52c7acb2.arrow  data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/2_colored_entities/tiam_score_per_prompt/: a_photo_of_a_green_banana_and_a_pink_truck.json  a_photo_of_a_green_elephant_and_a_blue_couch.json  a_photo_of_a_yellow_bicycle_and_a_blue_bird.json
tests/data/2_entities/: json_per_seed.json  json_with_list.json  prompts.csv  tiam_score_2_entities.json
tests/data/2_entities/dataset_300_samples/: data-00000-of-00001.arrow  dataset_info.json  state.json
tests/data/2_entities/tiam_score_per_prompt/: a_photo_of_a_giraffe_and_a_bear.json  a_photo_of_a_zebra_and_a_motorcycle.json  a_photo_of_an_oven_and_a_truck.json
tests/data/load_score/images_and_seed_consistent/: prompt_weighted_tiam_score_2_entities.json  prompt_weighted_tiam_score_3_entities.json  prompt_weighted_tiam_score_color.json  tiam_score_2_colored_entities.json  tiam_score_2_entities.json  tiam_score_3_entities.json  (+1 more)
(+24 files in other folders)
