[project]
name = "tiam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "colour-science>=0.4.6",
    "datasets>=3.1.0",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "omegaconf>=2.3.0",
    "pandas>=2.2.3",
    "pillow>=11.0.0",
    "rich>=13.9.4",
    "spacy>=3.7.5",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "ultralytics>=8.3.40",
]

[tool.ruff]
# Never enforce `E501` (line length violations).
lint.ignore = ["C901", "E501", "E741", "W605", "E402"]
lint.select = ["C", "E", "F", "I", "W"]
line-length = 119

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
]


[project.scripts]
tiam = "tiam.main:app"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

